Fix reset buttons in IE, improved navbar wrapping, better practice check styling

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
     font-family: 'Patua One', sans-serif;
     background-color: #42a5f5;
     width: 100%;
-    height: 70px;
+    min-height: 70px;
     color: white;
     -moz-user-select: none;
     -khtml-user-select: none;
@@ -57,10 +57,14 @@ body {
     height: 50px;
 }
 
+.navbar .navlinkContainer {
+    margin-bottom: 20px;
+}
+
 .navbar .navlink {
     cursor: pointer;
     font-size: 20px;
-    margin: 0 10px 0 10px;
+    margin: 20px 10px 0 10px;
 }
 
 .navbar .navlink:hover {
@@ -248,6 +252,7 @@ body {
 .content .practiceRefresh img {
     vertical-align: middle;
     width: 1em;
+    height: 1em;
 }
 
 .content .practiceSentence {
@@ -259,16 +264,20 @@ body {
     margin-top: 10px;
     padding: 5px 3em 5px 10px;
     position: relative;
+    min-height: 32px;
+    box-sizing: border-box;
 }
 
 .content .practiceCheck {
     position: absolute;
     right: 10px;
-    top: 0;
+    top: 1px;
 }
 
 .content .practiceCheck img {
-    height: 2em;
+    width: 32px;
+    height: 32px;
+    display: block;
 }
 
 .buttonBox {
